update to gatsbyv2

--- a/content/2018-09-23-post.md
+++ b/content/2018-09-23-post.md
@@ -1,6 +1,6 @@
 ---
 title: "libwebrtc のパッチ: localhost における desired ips との不一致を許容する"
-date: "23/09/2018"
+date: "2018-09-23"
 category: "tech"
 tags:
     - webrtc
