--- a/content/2018-09-23-post.md
+++ b/content/2018-09-23-post.md
@@ -1,10 +1,10 @@
 ---
-title: "libwebrtc のパッチ: localhost における desired ips との不一致を許容する"
+title: "[libwebrtc patch] localhost における desired ips との不一致を許容する"
 date: "2018-09-23"
 category: "tech"
 tags:
-    - webrtc
-    - webkit
+  - webrtc
+  - webkit
 ---
 
 
