--- a/content/2018-06-15-post.md
+++ b/content/2018-06-15-post.md
@@ -3,8 +3,8 @@ title: "fish shell で環境変数を渡すメモ"
 date: "2018-06-15"
 category: "tech"
 tags:
-    - fish shell
-    - misc
+  - fish
+  - misc
 ---
 
 毎回忘れて調べてしまうので、メモ
