--- a/content/2018-09-23-post.md
+++ b/content/2018-09-23-post.md
@@ -1,5 +1,5 @@
 ---
-title: "[libwebrtc patch] localhost における desired ips との不一致を許容する"
+title: "[libwebrtc patch] 9/21"
 date: "2018-09-23"
 category: "tech"
 tags:
