Update Post “2018-09-23-post”

--- a/content/2018-09-23-post.md
+++ b/content/2018-09-23-post.md
@@ -1,7 +1,8 @@
 ---
-title: "[libwebrtc patch] 9/21"
-date: "2018-09-23"
-category: "tech"
+title: '[libwebrtc patch] 9/21'
+date: '2018-09-23'
+slug: post
+category: tech
 tags:
   - webrtc
   - webkit
@@ -16,5 +17,6 @@ loopback IP(localhost) の場合は `Network::GetIPs()` ので指定されたも
 
 
 [bugzilla](https://bugs.webkit.org/show_bug.cgi?id=189828)
+
 [コード変更](https://bugs.webkit.org/attachment.cgi?id=350353&action=review)
 
